8193313: MediaPlayer Leaking Native Memory

Reviewed-by: kcr